Fixed: minor improvements with padding/gaps in blocks + reworked footer

--- a/src/components/AppFooter/AppFooter.module.css
+++ b/src/components/AppFooter/AppFooter.module.css
@@ -86,6 +86,10 @@
 @media (max-width: 769px) {
   .container {
     padding: 30px;
+    flex-direction: column;
+    align-self: auto;
+    text-align: center;
+    gap: 30px;
   }
 
   .text {
@@ -110,8 +114,8 @@
     gap: 5px;
   }
 
-  .year {
-    align-self: flex-end;
+  .navigationList {
+    justify-content: center;
   }
 }
 
@@ -119,6 +123,7 @@
   .container {
     flex-direction: column;
     padding: 20px;
+    gap: 40px;
   }
 
   .text {
@@ -132,14 +137,16 @@
   }
 
   .navigationList {
-    gap: 40px;
+    gap: 20px;
+    flex-direction: column;
   }
 
   .year {
     font-size: 26px;
     line-height: 32px;
-    text-align: center;
-    padding-top: 40px;
-    align-self: auto;
+  }
+
+  .contactsBlock {
+    gap: 20px;
   }
 }
