--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -11,7 +11,7 @@
   margin-right: auto;
   transition: all 0.5s linear;
   flex-direction: column;
-  gap: 15px;
+  gap: 50px;
 }
 
 .text {
@@ -20,8 +20,8 @@
   font-family: 'VremenaGrotesk', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 28px;
-  line-height: 34px;
+  font-size: 30px;
+  line-height: 36px;
   transition: all 0.5s linear;
   text-rendering: optimizeLegibility;
 }
@@ -43,11 +43,12 @@
 @media (max-width: 769px) {
   .container {
     padding: 30px;
+    gap: 40px;
   }
 
   .text {
-    font-size: 26px;
-    line-height: 32px;
+    font-size: 28px;
+    line-height: 34px;
   }
 }
 
@@ -55,10 +56,11 @@
   .container {
     flex-direction: column;
     padding: 20px;
+    gap: 30px;
   }
 
   .text {
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 26px;
+    line-height: 32px;
   }
 }
